working blockchain - tested
